--- a/calculadora/calc.html
+++ b/calculadora/calc.html
@@ -9,14 +9,14 @@
   <body>
     <div class="fundo">
       <div class="calculadora">
-        <h1>Calclabs</h1>
+        <h1>CalcLabs</h1>
         <p id="resultado"></p>
         <table>
           <tr>
             <td><button class="botao" onclick="limpa()">C</button></td>
             <td><button class="botao" onclick="apaga()">⇽</button></td>
-            <td><button class="botao" onclick="inseret('/')">/</button></td>
-            <td><button class="botao" onclick="insere('*')">X</button></td>
+            <td><button class="botao" onclick="insere('/')">/</button></td>
+            <td><button class="botao" onclick="insere('*')">x</button></td>
           </tr>
           <tr>
             <td><button class="botao" onclick="insere('7')">7</button></td>
