--- a/toDo_List/index.html
+++ b/toDo_List/index.html
@@ -24,8 +24,8 @@
         <div id="tarefas">
             <div class="checkbox">
                 <div>
-                    <input type="checkbox" >
-                    <label for="">teste 1</label>
+                    <!-- <input type="checkbox" >
+                    <label for="">teste 1</label> -->
                 </div>
                 <div class="trash-img"> 
                     <i data-feather="trash-2" style="scale: 0.9"></i>
@@ -34,8 +34,8 @@
 
             <div class="checkbox">
                 <div>
-                    <input type="checkbox">
-                    <label for="">teste 2</label>
+                    <!-- <input type="checkbox">
+                    <label for="">teste 2</label> -->
                 </div>
                 <div class="trash-img"> 
                     <i data-feather="trash-2" style="scale: 0.9" ></i>
@@ -44,8 +44,8 @@
 
             <div class="checkbox">
                 <div>
-                    <input type="checkbox"> 
-                    <label for="">teste 3</label>
+                    <!-- <input type="checkbox"> 
+                    <label for="">teste 3</label> -->
                 </div>
                 <div class="trash-img"> 
                     <i data-feather="trash-2" style="scale: 0.9"></i>
